--- a/webpage.html
+++ b/webpage.html
@@ -5,9 +5,6 @@
     <title>
         Rule The World
     </title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,400;1,700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
    
@@ -18,7 +15,7 @@
         <img id="logo" src="https://zerocreativity0.files.wordpress.com/2016/02/titan-logo-sudarshan-dheer.jpg"
             alt="company logo">
     </div>
-    <img id="banner" src="banner.jpg" alt="banner" height="500">
+    <img id="banner" src="banner.jpg" alt="banner" height="500px">
     <h1 style="text-align: center;color: rgb(237, 22, 22);">About Jovian</h1>
     <div id="About">
         <div id="description">
